@@ -499,6 +499,34 @@ extern char * __default_path;
 
 /****************************************************************************/
 
+/*
+ * 'environ' is the default environment variable table as used by the execl(),
+ * execv() and execvp() functions. This needs to be initialized before you
+ * can use it. The table has the following form:
+ *
+ *    char ** environ =
+ *    { 
+ *       "variable1=value",
+ *       "variable2=value",
+ *       NULL
+ *    };
+ *
+ * Note that if you initialize the 'environ' table you will also have to
+ * provide for a function which prepares its contents in execve() for use
+ * by the command to be executed. That function is called
+ * __execve_environ_init(). Should program execution fail, you need to
+ * clean up after what __execve_environ_init() set up. To do this, call
+ * __execve_environ_exit(). There are stubs in clib2 for these functions
+ * which essentially do nothing at all. You will have to implement these
+ * yourself if you want to use them.
+ */
+extern char ** environ;
+
+extern int __execve_environ_init(char * const envp[]);
+extern void __execve_environ_exit(char * const envp[]);
+
+/****************************************************************************/
+
 #ifdef __cplusplus
 }
 #endif /* __cplusplus */
